Adicionando link para código do projeto

--- a/resources/views/templates/home/prototipos.html.twig
+++ b/resources/views/templates/home/prototipos.html.twig
@@ -6,7 +6,7 @@
         } only %}
             {% block summary %}
                 <p>Projeto final de Programação Concorrente 2024.02: Segmentação de Imagens usando método limite (Thresholding).</p>
-                <p>Principal objetivo do trabalho é aplicar concorrência na leitura das imagens para aplicar o método, também foi desenvolvido uma interface gráfica usando Qt6 e C++ para o usuário: selecionar a imagem, escolher modo sequencial ou concorrente do programa, rodar o solver, salvar o resultado.</p>
+                <p>Principal objetivo do trabalho é aplicar concorrência na leitura das imagens para aplicar o método, também foi desenvolvido uma interface gráfica usando Qt6 e C++ para o usuário: selecionar a imagem, escolher modo sequencial ou concorrente do programa, rodar o solver, salvar o resultado. Veja também o <a href="https://github.com/diegomatos321/UFRJ-Laboratorios/tree/main/programacao-concorrente-2024-01/trabalho-final" class="underline text-blue-600" target="__blank">código fonte</a>.</p>
             {% endblock %}
         {% endembed %}
     </li>
