Adicionando trabalho e links para outros perfis

--- a/resources/views/templates/contato.html.twig
+++ b/resources/views/templates/contato.html.twig
@@ -39,6 +39,16 @@
                                 <div style="width: 2rem;">{{ include('templates/icons/fa-linkedin.svg') }}</div>
                             </a>
                         </li>
+                        <li>
+                            <a href="https://www.99freelas.com.br/user/devdiegomatos" target="_blank">
+                                <img style="width: 2rem;" src="/assets/icons/99freela-favicon-32x32.png" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.workana.com/freelancer/8e3063661f7c582f2770ffe4b3ee19e4/" target="_blank">
+                                <img style="width: 2rem;" src="/assets/icons/workana-favicon.png" />
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
